Explain new default LaunchDescriptor FOLIO-2236 FOLIO-2185